force-app/main/default/objects/ItemGrade__c/ItemGrade__c.object-meta.xml
<CustomObject>
    <label>Item Grade</label>
    <nameField>
        <displayFormat>ITG {0000000000}</displayFormat>
        <label>N° Item Grade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens Grade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>