force-app/main/default/objects/ItemGrade__c/fields/Codigo_Grade__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Grade__c</fullName>
    <formula>Grade__r.CodigoGrade__c</formula>
    <label>Código Grade</label>
    <type>Text</type>
</CustomField>