force-app/main/default/objects/ItemGrade__c/fields/CodigoGrade__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrade__c</fullName>
    <externalId>true</externalId>
    <label>Código Item Grade</label>
    <length>31</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>