force-app/main/default/objects/ItemGrade__c/fields/DescricaoGrade__c.field-meta.xml
<CustomField>
    <fullName>DescricaoGrade__c</fullName>
    <formula>Grade__r.Descricao__c</formula>
    <label>Descrição Grade</label>
    <type>Text</type>
</CustomField>