force-app/main/default/objects/ItemGrade__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <referenceTo>Grade__c</referenceTo>
    <relationshipLabel>Itens Grade</relationshipLabel>
    <relationshipName>ItensGrade</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>