force-app/main/default/objects/ItemGrade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grade__c</columns>
    <columns>Produto__c</columns>
    <columns>CodigoGrade__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>